[package]
name = "jito-sdk-rust"
version = "0.2.2"
authors = ["mdr0id <marshall@jito.wtf>"]
edition = "2021"

# Add these fields
description = "Rust SDK for interacting with Jito RPC services on Solana"
license = "MIT"
repository = "https://github.com/jito-labs/jito-rust-rpc"
homepage = "https://www.jito.wtf/"
keywords = ["solana", "rpc", "jito", "blockchain", "sdk"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "macros"] }
anyhow = "1.0"
serde = "1.0.209"
bincode = "1.3.3"
bs58 = "0.4.0"
base64 = "0.21.0"  # Added base64 to main dependencies
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Remove the [[example]] section if it exists

[dev-dependencies]
solana-client = "1.16"
solana-sdk = "1.16"