[package]
name = "jito-sdk-rust"
version = "0.3.2"
authors = ["mdr0id <marshall@jito.wtf>"]
edition = "2021"

description = "Rust SDK for interacting with Jito RPC services on Solana"
license = "MIT"
repository = "https://github.com/jito-labs/jito-rust-rpc"
homepage = "https://www.jito.wtf/"
keywords = ["solana", "rpc", "jito", "blockchain", "sdk"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "macros"] }
anyhow = "1.0"
serde = "1.0.209"
bincode = "1.3.3"
bs58 = "0.4.0"
base64 = "0.21.0"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Individual Solana crates - ONLY for examples
[dev-dependencies]
solana-client = "2.2.7"
solana-instruction = "2.2.1"
solana-pubkey = "2.2.1"
solana-keypair = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = "2.2.2"
solana-program = "2.2.1"